fix content out of screen on phones

--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,7 @@ table th, table td {
 
 .characteristics-diagrams {
     display: flex;
-    flex-direction: column;
+    flex-flow: column wrap;
     align-items: center;
 }
 
